Added mobile fix

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,6 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/nprogress/nprogress.css",
               "node_modules/normalize.css/normalize.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/fonts/fontello/css/fontello.css",
@@ -39,9 +38,7 @@
               "src/assets/css/768.css",
               "src/assets/css/demo4.css"
             ],
-            "scripts": [
-              "node_modules/nprogress/nprogress.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
