--- a/angular.json
+++ b/angular.json
@@ -15,13 +15,18 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/ng-varanjith",
+            "outputPath": {
+              "base": "dist/ng",
+              "browser": "ng-varanjith"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
+            "browser": "src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "tsConfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
@@ -60,27 +65,30 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true,
+              "sourceMap": false,
+              "extractLicenses": true
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "buildTarget": "ng-varanjith:build:development"
+          },
           "configurations": {
             "production": {
-              "browserTarget": "ng-varanjith:build:production"
+              "buildTarget": "ng-varanjith:build:production"
             },
             "development": {
-              "browserTarget": "ng-varanjith:build:development"
+              "buildTarget": "ng-varanjith:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -88,14 +96,17 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-varanjith:build"
+            "buildTarget": "ng-varanjith:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
@@ -114,7 +125,7 @@
           "options": {
             "prerender": false,
             "ssr": false,
-            "browserTarget": "ng-varanjith:build:production",
+            "buildTarget": "ng-varanjith:build:production",
             "firebaseProject": "ngvaranjith-datastore",
             "firebaseHostingSite": "ngvaranjith-datastore"
           }
