--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^20.0.4",
     "@angular/router": "^20.0.4",
     "bootstrap": "^5.3.7",
+    "isotope-layout": "^3.0.6",
+    "ngx-lightbox": "^3.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
@@ -28,6 +30,7 @@
     "@angular-devkit/build-angular": "^20.0.3",
     "@angular/cli": "^20.0.3",
     "@angular/compiler-cli": "^20.0.4",
+    "@types/isotope-layout": "^3.0.15",
     "@types/jasmine": "^5.1.8",
     "jasmine-core": "^5.8.0",
     "karma": "^6.4.4",
