--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "polyfills": [
               "zone.js"
             ],
-            "tsConfig": "tsConfig.app.json",
+            "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
