Added too much files

--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@angular/platform-browser": "^20.0.4",
     "@angular/platform-browser-dynamic": "^20.0.4",
     "@angular/router": "^20.0.4",
+    "@types/crypto-js": "^4.2.2",
     "bootstrap": "^5.3.7",
+    "crypto-js": "^4.2.0",
     "isotope-layout": "^3.0.6",
     "ngx-lightbox": "^3.0.0",
+    "ngx-toastr": "^19.0.0",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
@@ -32,6 +36,7 @@
     "@angular/compiler-cli": "^20.0.4",
     "@types/isotope-layout": "^3.0.15",
     "@types/jasmine": "^5.1.8",
+    "@types/nprogress": "^0.2.3",
     "jasmine-core": "^5.8.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
