--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "polyfills": [
               "zone.js"
             ],
-            "tsConfig": "tsConfig.app.json",
+            "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
@@ -39,6 +39,8 @@
               "node_modules/normalize.css/normalize.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-lightbox/lightbox.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/nprogress/nprogress.css",
               "src/styles.scss",
               "src/assets/css/fonts/fontello/css/fontello.css",
               "src/assets/css/align.css",
